--- a/README
+++ b/README
@@ -33,4 +33,4 @@
 
 Reference
 Yang Li, Jun Hu, Chengxin Zhang, Dong-Jun Yu, and Yang Zhang, ResPRE: high-accuracy protein 
-contact prediction by coupling precision matrix with deep residual neural networks.
+contact prediction by coupling precision matrix with deep residual neural networks.Bioinformatics.
